browser/css/cool.css
:root {
	/*All used fonts (except w2ui)
	----------------------------------*/
	--cool-font: 'Segoe UI', Tahoma, Arial, Helvetica, sans-serif;
	/*investigate what are the drawback in consisntly use --cool-fonts
	for jquery-ui and perhaps mobile*/
	--mobile-font: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
	--jquery-ui-font: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;

	--docs-font: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
	--docs--pre-font: 'Consolas', 'Menlo', 'Lucida Console', 'Courier New', monospace;

	/* Shared color for cell and selection border */
	--cell-cursor-selection-border-color: var(--color-primary);

	--btn-size: 24px;
	--btn-size-m: 18px;
	--btn-size-s: 16px;
	--border-radius: 4px; /* buttons, widgets */
	--border-radius-large: 10px; /* dialog */

	--default-font-size: 12px;
	--header-font-size: 16px;
	/* tab min font-size */
	--tb-min-fs: 11px;
	/* tab min font-size without units*/
	--tb-min-fs-u: 11;
	/* tab max font-size */
	--tb-max-fs: 16px;
	/* tab max font-size wihtout units*/
	--tb-max-fs-u: 16;
	/* tab font-size preferred value or scaler */
	--tb-fs-s: 1vw;

	--default-height: 24px;
	--header-height: 38px;

	/* Annotations */
	--annotation-input-size: 100px;
	--annotation-max-size: 1000;
	--annotation-min-size: 100;

	/* Ruler */
	--ruler-height: 20px;
}
.focus-hidden:focus {
	outline: none;
}

.access-key {
	text-decoration: none;
}

.activate-underlines .access-key {
	text-decoration: underline;
}

.accessibility-info-box {
	width: 26px;
	height: 16px;
	font-size: 12px;
	line-height: 16px;
	text-align: center;
	background-color: yellow;
	color: rgb(68, 24, 24);
	position: absolute;
	z-index: 20;
	border: 1px solid black;
	display: none;
}

.activate-info-boxes .accessibility-info-box {
	display: block;
}

.activate-info-boxes .accessibility-info-box.filtered_out {
	display: none;
}

/* Flexbox */
.d-flex {
	display: flex;
}
.flex-column {
	/* Initial value */
	flex-direction: column;
}
.flex-row {
	flex-direction: row;
}
.align-items-center {
	align-items: center;
}
.justify-items-center {
	justify-items: center;
}
.align-content-center {
	align-content: center;
}
.justify-content-center {
	justify-content: center;
}

/* Space */
.m-v-0 {
	margin-block: 0;
}

/* Border */
.border-0 {
	border: 0 !important;
}

/* clip technique: hide visually but keep it available to screen readers */
.visuallyhidden {
	border: 0;
	clip: rect(0 0 0 0);
	height: 1px;
	margin: -1px;
	overflow: hidden;
	padding: 0;
	position: absolute;
	width: 1px;
}
#document-container.readonly.mobile.spreadsheet-doctype {
	top: 36px;
	position: fixed;
}
#document-container {
	background-color: var(--color-main-background);
	position: relative;
	margin: 0;
	padding: 0;
	width: 100%;
	flex: 1;
	display: block;
	height: 100%;
}

.color-palette-selector {
	margin: 0 5px !important;
}

.color-palette-selector > select {
	width: 100% !important;
	padding: 0 14px 0 4px;
	height: 28px;
	font-size: var(--default-font-size);
	font-family: var(--jquery-ui-font);
}

#toolbar-wrapper.readonly {
	display: none;
}

#map {
	position: absolute;
	top: 0px;
	bottom: 0px;
	left: 0px;
	right: 0px;
	z-index: 10;
	cursor: auto;
	background-color: transparent;
	margin: 0;
}

.leaflet-progress-layer
{
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	z-index: 1000;
}

.bucket-cursor {
	cursor: url('images/cursors/fill.png') 4 18, auto !important;/*setting coordinates to align the tip of the brush icon */
}
.cool-scrollbar-show {
	opacity: 1 !important;
	filter: 'alpha(opacity=100)' !important;
	-ms-filter: 'alpha(opacity=100)' !important;
}

.table-column-resize-marker {
	margin-left: 0px;
	margin-top: 0px;
	width: var(--btn-size);
	height: var(--btn-size);
	background-image: url('images/table-column-resize-marker.svg');
	background-size: 100% 100%;
	background-repeat: no-repeat;
	cursor: col-resize;
}

.table-column-resize-marker:hover {
	margin-left: 0px;
	margin-top: 0px;
	width: var(--btn-size);
	height: var(--btn-size);
	background-image: url('images/table-column-resize-marker-hover.svg');
	background-size: 100% 100%;
	background-repeat: no-repeat;
	cursor: col-resize;
}

.table-row-resize-marker {
	margin-left: 0px;
	margin-top: 0px;
	width: var(--btn-size);
	height: var(--btn-size);
	background-image: url('images/table-row-resize-marker.svg');
	background-size: 100% 100%;
	background-repeat: no-repeat;
	cursor: row-resize;
}

.table-row-resize-marker:hover {
	margin-left: 0px;
	margin-top: 0px;
	width: var(--btn-size);
	height: var(--btn-size);
	background-image: url('images/table-row-resize-marker-hover.svg');
	background-size: 100% 100%;
	background-repeat: no-repeat;
	cursor: row-resize;
}

.table-select-marker {
	margin: 0px;
	width: var(--btn-size);
	height: var(--btn-size);
	background: url('images/table-row-or-column-select-marker.svg') no-repeat center center /12px;
	cursor: pointer;
}

.table-select-marker::before {
	content: '';
	position: absolute;
	z-index: 0;
}

.table-select-marker--column::before {
	bottom: 50%;
	border-bottom: 1px dashed lightgray;
	width: 100%;
}

.table-select-marker--row::before {
	left: 50%;
	border-left: 1px dashed lightgray;
	height: 100%;
}

.table-select-marker:hover {
	background: url('images/table-row-or-column-select-marker-selected.svg') no-repeat center center /12px;
}

.table-select-marker:hover::before {
	border-color: var(--color-primary);
}

.table-move-marker {
	margin-left: 0px;
	margin-top: 0px;
	width: var(--btn-size);
	height: var(--btn-size);
	background-image: url('images/table-move-marker.svg');
	background-size: 100% 100%;
	background-repeat: no-repeat;
	cursor: move;
}

body {
	margin: 0;
	overflow: hidden;
	overscroll-behavior-y: none; /* disable the pull to reload gesture */
	background: var(--color-main-background);
	touch-action: none;
	line-height: normal;
}
/* ... */

